--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning Management System with Node.js and MongoDB",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
